[gd_scene load_steps=5 format=2]

[ext_resource path="res://board/GameTileSet.tres" type="TileSet" id=1]
[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=2]
[ext_resource path="res://UI/FoundHeroBlueprintDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/ShowEnemiesKilled.tscn" type="PackedScene" id=4]

[node name="GameOverScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 131072, 1, 0, 131073, 1, 0, 131080, 1, 0, 131081, 1, 0, 196608, 1, 0, 196609, 1, 0, 196616, 1, 0, 196617, 1, 0, 262144, 1, 0, 262145, 1, 0, 262152, 1, 0, 262153, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0 )

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( -112, 0 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg_gold" type="Label" parent="."]
margin_left = 8.0
margin_top = 24.0
margin_right = 200.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( -112, 0 )
text = "Gold Earned This Run: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 88.0
margin_top = 224.0
margin_right = 280.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( -112, 0 )
text = "[ Press SPACE to restart ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoundHeroes" type="Node2D" parent="."]
position = Vector2( 16, 56 )

[node name="FoundHeroBlueprintDisplay" parent="FoundHeroes" instance=ExtResource( 3 )]
visible = false
position = Vector2( 24, 48 )

[node name="FoundHeroBlueprintDisplay2" parent="FoundHeroes" instance=ExtResource( 3 )]
visible = false
position = Vector2( 72, 48 )

[node name="ScrollContainer" type="ScrollContainer" parent="FoundHeroes"]
margin_right = 272.0
margin_bottom = 160.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="FoundHeroes/ScrollContainer"]
custom_constants/separation = 48

[node name="Button" type="Button" parent="."]
margin_left = 216.0
margin_top = 8.0
margin_right = 311.0
margin_bottom = 28.0
text = "show kills (K)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowEnemiesKilled" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_bottom = 24.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
